--- a/src/main/resources/templates/app.html
+++ b/src/main/resources/templates/app.html
@@ -22,8 +22,6 @@
 </head>
 
 <body>
-      
-
     <div id="app" class="app">
         <div class="head"> 
             <span class="title"> On-Time </span><br>
@@ -79,13 +77,12 @@
             <button class="add-btn" type="button" @click="Bwrite()" v-if="mode === 'list'"> + </button>
         </div> 
     </div>
-    
-
     <script src="JS/test4/app.js"></script>
 </body>
 <script th:inline="javascript">
     /*<![CDATA[*/
     var query = /*[[${PI}]]*/ 'default';
+    console.log(query) // object
     /*]]>*/
 </script>
 
