--- a/src/main/resources/static/JS/test4/app.css
+++ b/src/main/resources/static/JS/test4/app.css
@@ -1,6 +1,6 @@
 .app > .head {
   padding: 10px;
-  background: pink;
+  background: lightskyblue;
   border-bottom: 1px solid #ddd;
   text-align: center;
   position: relative;
@@ -13,7 +13,7 @@
 }
 
 .app > .head button {
-  background: red;
+  background: gold;
   border: 1px solid black;
   padding: 7px;
   cursor: pointer;
@@ -22,7 +22,7 @@
 }
 
 .app > .head button.active {
-  background: maroon;
+  background: cadetblue;
   color :white;
 }
 
