--- a/src/main/resources/templates/app.html
+++ b/src/main/resources/templates/app.html
@@ -12,7 +12,7 @@
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script><!-- Latest compiled and minified CSS -->
-   
+
     <script src="//unpkg.com/bootstrap-vue@latest/dist/bootstrap-vue.min.js"></script>
     <link type="text/css" rel="stylesheet" href="//unpkg.com/bootstrap-vue@latest/dist/bootstrap-vue.min.css" />
 
@@ -55,7 +55,7 @@
                 <b-modal id="create-promise" title="약속 만들기" hide-footer>
                     <div class="modal-body">
                         <p>약속이름 :</p>
-                        <input v-model="createPromise.promiseName" placeholder="약속이름">
+                        <input v-model="createPromise.promiseName" placeholder="약속이름" required>
                         <p>약속장소명 :</p>
                         
                         <!-- 카카오 맵 -->
@@ -75,8 +75,15 @@
                             </ul>
                             <div id="pagination"></div>
                         </div>
-                        <p>약속시간 :</p>
-                        <input v-model="createPromise.promiseTime" placeholder="약속시간">
+                        <p>날짜 : </p>
+                        <input type="date" v-model="createPromise.promiseDate" required>
+                        <p>시간 :
+                        <select v-model="createPromise.promiseHour">
+                            <option v-for="h in hour">{{h}}</option>
+                        </select> 시  
+                        <select v-model="createPromise.promiseMinute">
+                            <option v-for="m in minute">{{m}}</option>
+                        </select> 분
                         <b-button class="mt-3" block @click="printInfo(this.query); $bvModal.hide('create-promise')">만들기</b-button>
                     </div>
                 </b-modal>
