--- a/src/main/resources/templates/app.html
+++ b/src/main/resources/templates/app.html
@@ -26,29 +26,55 @@
 </head>
 
 <body>
-    <input type="hidden" >
     <div id="app" class="app">
         <div class="head"> 
             <span class="title"> On-Time </span><br>
             <button v-for='c in categories' :class="{ 'active' : category === c }" @click="category = c">{{ c }}</button>
+            <button id="my-page-btn" class="" @click="setModeMyPage()"></button>
             <span class="list-btn" v-if = "mode !== 'list'" @click = "mode = 'list'"> &lt; </span>
         </div>
         <div class="body" v-if="category === 'Personal'">
+            <!-- 내 약속 모두 보기-->
             <div class="list" v-if="mode === 'list'">
                 <ul>
                     <li v-for="promise in promises" @click = "selectPromise(promise)">{{ promise.promiseName }}</li>
                 </ul>
+                
             </div>
-            <div class="write" v-else> <!-- 상세내용 표기 -->
+            <!-- 상세내용 표기 -->
+            <div class="write" v-else-if = "mode === 'promise'"> 
                 <ul>
                     <h2>{{selectedPromise.promiseName}}</h2>
                     위치 : {{selectedPromise.placeName}} <br>
                     약속 시간 : {{selectedPromise.promiseTime}}
                 </ul>
                 <b-button @click="getLocation">내 위치 보기</b-button>
+                <ul>
+                    <li v-for="member in selectedPromise.members">{{member.userName}}</li>
+                </ul>
             </div>
-            <!-- Modal -->
-            
+            <!-- 마이 페이지 -->
+            <div class="my-page" v-else-if="mode==='myPage'">
+                <p>이름 : {{user.userName}}</p>
+                <p>메일 : {{user.userEmail}}</p>
+                <p>성별 : </p>
+                <p>나이 : <input type="text" v-model="user.userAge" max="100" min="1" placeholder="나이를 입력해주세요"></p>
+                <p>연락처 : <input type="text" v-model="user.userPhone" placeholder="전화번호를 입력해주세요 010-0000-0000"></p>
+                <button @click="updateUser">수정</button>
+                <h3>Place</h3>
+                <table>
+                    <tr>
+                        <td v-for="place in favorite.place"><div class="favorite">{{place}}</div></td>
+                    </tr>
+                </table>
+                <h3>Best Friends</h3>
+                <table>
+                    <tr>
+                        <td v-for="f in favorite.friend"><div class="favorite">{{f}}</div></td>
+                    </tr>
+                </table>
+            </div>
+            <!-- 약속 만들기( Modal ) -->
             <div>
                 <b-button v-b-modal.create-promise class="btn btn-toggle add-btn" v-if="mode === 'list'">+</b-button>
               
@@ -73,7 +99,6 @@
                             <ul id="placesList">
                                 <li v-for="place in searchedPlaces" @click="setPlace(place)">{{place.place_name}}</li>
                             </ul>
-                            <div id="pagination"></div>
                         </div>
                         <p>날짜 : </p>
                         <input type="date" v-model="createPromise.promiseDate" required>
@@ -84,10 +109,11 @@
                         <select v-model="createPromise.promiseMinute">
                             <option v-for="m in minute">{{m}}</option>
                         </select> 분
-                        <b-button class="mt-3" block @click="printInfo(this.query); $bvModal.hide('create-promise')">만들기</b-button>
+                        <b-button class="mt-3" block @click="create(); $bvModal.hide('create-promise')">만들기</b-button>
                     </div>
                 </b-modal>
             </div>
+            
         </div>
 
     </div>
@@ -95,7 +121,6 @@
         /*<![CDATA[*/
         var query = /*[[${PI}]]*/ 'default';
         /*]]>*/
-        
     </script>
     <script src="JS/test4/app.js"></script>
     <script src="JS/test4/map.js"></script>
