--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,28 +1,49 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
 <head>
 <meta charset="UTF-8">
-<title>Insert title here</title>
-<style>
-.max-small {
-    width: auto; height: auto;
-    max-width: 300px;
-    max-height: 70px;
-}
-</style>
-</head>
-<body>
-	<a href="/login"> 
-	<img class="max-small" src="/img/loginBtn.png">
-	</a><br>
-	
-	<a href="/loginNaver"> 
-	<img class="max-small" src="/img/loginNaver.png">
-	</a><br>
+<title>Log-in</title>
+<link rel="stylesheet"
+	href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+	integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
+	crossorigin="anonymous">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+	 <link rel="stylesheet" href="JS/test4/login.css" type="text/css" />
+<script src="https://kit.fontawesome.com/9b168c4728.js" crossorigin="anonymous"></script>
 
-	<a href="/loginGoogle"> 
-	<img class="max-small" src="/img/loginGoogle.png"> 
-	</a>
-	
+</head>
+
+<body>
+	<div id="loginform" >
+	<div class="title">OnTime</div>
+		<div id="login">
+			<a href="/login"> 
+			<img class="max-small" id="kakao" src="/img/loginBtn.png">
+			</a><br> 
+			
+			<a href="/loginNaver"> 
+			<img class="max-small" id="naver" src="/img/loginNaver.png">
+			</a><br> 
+			
+			<a href="/loginGoogle"> 
+			<img class="max-small" id="google" src="/img/loginGoogle.png">
+			</a>
+		</div>
+	</div>
+
+
+	<!-- js -->
+	<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+		integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
+		crossorigin="anonymous"></script>
+	<script
+		src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+		integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+		crossorigin="anonymous"></script>
+	<script
+		src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+		integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
+		crossorigin="anonymous"></script>
 </body>
 </html>
