--- a/src/main/resources/static/JS/test4/login.css
+++ b/src/main/resources/static/JS/test4/login.css
@@ -39,3 +39,25 @@ body{
   width:200px;
   height:55px;
 }
+
+.google {
+  background-color: #dd4b39;
+  color: white;
+}
+
+.btn {
+  width: 100%;
+  padding: 12px;
+  border: none;
+  border-radius: 4px;
+  margin: 5px 0;
+  opacity: 0.85;
+  display: inline-block;
+  font-size: 17px;
+  line-height: 20px;
+  text-decoration: none; /* remove underline from anchors */
+}
+
+.btn:hover {
+  opacity: 1;
+}
