--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -2,6 +2,7 @@
 <html lang="ko">
 <head>
 <meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Log-in</title>
 <link rel="stylesheet"
 	href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
@@ -9,13 +10,17 @@
 	crossorigin="anonymous">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-	 <link rel="stylesheet" href="JS/test4/login.css" type="text/css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+	<link rel="stylesheet" href="JS/test4/login.css" type="text/css" />
+	<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet" type="text/css">
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+<link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-social/4.12.0/bootstrap-social.css" rel="stylesheet" type="text/css">
 <script src="https://kit.fontawesome.com/9b168c4728.js" crossorigin="anonymous"></script>
 
 </head>
 
 <body>
-	<div id="loginform" >
+	<!-- <div id="loginform" >
 	<div class="title">OnTime</div>
 		<div id="login">
 			<a href="/login"> 
@@ -23,14 +28,23 @@
 			</a><br> 
 			
 			<a href="/loginNaver"> 
-			<img class="max-small" id="naver" src="/img/loginNaver.png">
+			<img class="max-small" id="naver" src="https://static.nid.naver.com/oauth/big_g.PNG">
 			</a><br> 
 			
-			<a href="/loginGoogle"> 
-			<img class="max-small" id="google" src="/img/loginGoogle.png">
+			<a href="/loginGoogle" class="google btn"> 
+				<img class="max-small" id="google" src="/img/loginGoogle.png">
+				<i class="fa fa-google fa-fw"></i> 아이디로 로그인
 			</a>
+			<a class="btn btn-social btn-google" href="//loginGoogle">
+ 				<span class="fa fa-google"></span> Sign in with Google
+ 			</a>
 		</div>
-	</div>
+	</div> -->
+			<a href="/login" class="social-button" id="kakao-connect"> <span>Connect with Kakao</span></a>
+			<a href="/loginNaver" class="social-button" id="naver-connect"> <span>Connect with Naver</span></a>
+			<a href="/loginGoogle" class="social-button" id="google-connect"> <span>Connect with Google</span></a>
+	
+	
 
 
 	<!-- js -->
