--- a/src/main/resources/static/JS/test4/app.css
+++ b/src/main/resources/static/JS/test4/app.css
@@ -52,8 +52,8 @@ ul, li {
 }
 
 .promise {
+  display: flex;
   position: relative;
-  background-color: white;
   text-align: center;
   list-style: none;
   width: 90%;
@@ -69,7 +69,21 @@ ul, li {
   animation: fade-promise 1s linear forwards;
 }
 
-.end {
+.today {
+  background-color: white;
+  -webkit-animation-name: pulseBorder;
+  -webkit-animation-iteration-count: infinite;
+  -webkit-animation-timing-function: ease;
+  -webkit-animation-direction: alternate;
+  -webkit-animation-duration: 2s;
+
+}
+
+.upcoming {
+  background-color: white;
+}
+
+.end{
   background-color: rgb(217, 223, 223);
 }
 
@@ -83,8 +97,6 @@ ul, li {
 
 .promise-status {
   display: inline-block;
-  background-image:url(/img/havetogo.gif);
-  background-repeat:no-repeat;
   background-size: cover;
   height:80px; 
   width:80px; 
@@ -94,8 +106,23 @@ ul, li {
   right: 5px;
 }
 
-.end > .promise-status {
+.today > .promise-status {
+  background-image:url(/img/coming.gif);
+  background-size: cover;
+}
+
+.upcoming > .promise-status {
+  background-image:url(/img/upcoming.gif);
+  background-size: cover;
+}
+
+.ontime > .promise-status {
   background-image:url(/img/end.gif);
+  background-size: cover;
+}
+
+.end > .promise-status {
+  background-image:url(/img/late.gif);
   background-size: cover;
 }
 
@@ -159,5 +186,16 @@ ul, li {
     opacity: 1;
     visibility: visible;
     transform: translateY(0);
+  }
+}
+
+@-webkit-keyframes pulseBorder {
+  from {
+    border:solid 3px transparent;
+  }
+  to {
+    border:solid 3px;
+    border-color: rgb(126, 205, 241); 
+
   }
 }
