--- a/src/main/resources/static/JS/test4/login.css
+++ b/src/main/resources/static/JS/test4/login.css
@@ -1,41 +1,53 @@
-#loginform{
-  position: relative;
+html, body, #loginform{
+	background-color:rgb(126, 205, 241);
+	height: 100%;
+	width: 100%;
 }
 
-.title{
-	height:500px;
-	text-align:center;
-	font-size: 100px;
-	color: #F6F7F3;
+a{
+  text-decoration:none !important
 }
-#login{
-    position: absolute;
-    top:90%;
-    left: 26%;
-    margin: 0;
+.title {
+	padding-top: 60%;
+	padding-bottom: 10%;
+	height: 20%;
+	text-align: center;
+	vertical-align: bottom;
+	color: white;
+	font-size: 70px;
 }
 
-body{
-  background-color:rgb(158, 189, 222);
+#login {
+	height: 40%;
 }
-.max-small {
-  max-width: 200px; 
-  max-height: 80px;
+.login {
+	position: relative;
+	margin-top: 5%;
+}
+
+.login-btn {
+	text-align: center;
+	border-radius: 20px;
+	border: 2px solid black;
+	margin-left: 20%;
+    margin-right: 20%;
+    padding-top: 5%;
+    padding-bottom: 5%;
+	font-size: 30px;
+	background-color: rgb(202, 255, 251);
 }
 
 #kakao {
-  width:200px;
-  height:55px;
-  margin-bottom: 10px;
+	border-color: rgb(207, 207, 33);
+	color: rgb(207, 207, 33);
 }
 
 #naver {
-  width:200px;
-  height:55px;
-  margin-bottom: 10px;
+	border-color: rgb(97, 255, 48);
+	color: rgb(97, 255, 48);
 }
 
 #google {
-  width:200px;
-  height:55px;
+	border-color: rgb(68, 65, 245);
+	color: rgb(68, 65, 245);
 }
