--- a/src/main/resources/templates/app.html
+++ b/src/main/resources/templates/app.html
@@ -40,8 +40,20 @@
             <!-- 내 약속 모두 보기-->
             <div class="list" v-if="mode === 'list'">
                 <ul>
-                    <li class="promise" v-for="promise in promises" @click = "selectPromise(promise)" :class="{'end' : getDateTime(promise) < 0}">{{ promise.promiseName }}
-                    <span class="promise-status" />
+                    <li class="promise today" v-for="promise in getPromises('today')" @click = "selectPromise(promise)">{{ promise.promiseName }}
+                    <!-- <span class="promise-status" /> -->
+                    </li>
+                </ul>
+                <h5>앞으로의 약속</h5>
+                <ul>
+                    <li class="promise upcoming" v-for="promise in getPromises('upcoming')" @click = "selectPromise(promise)">{{ promise.promiseName }}
+                    <!-- <span class="promise-status" /> -->
+                    </li>
+                </ul>
+                <h5>지난 약속</h5>
+                <ul>
+                    <li class="promise end" v-for="promise in getPromises('end')" @click = "selectPromise(promise)">{{ promise.promiseName }}
+                    <!-- <span class="promise-status" :class="{'late': promise.arrival==='ontime'}" /> -->
                     </li>
                 </ul>
             </div>
@@ -53,12 +65,13 @@
                 {{selectedPromise.address}} <br>
                 {{selectedPromise.promiseTime.substring(0,16)}}<br>
                 <hr>
-                <b-button @click="getLocation">내 위치 보기</b-button> <br>
-                	위도 : {{position.latitude}}<br>
-                	경도 : {{position.longitude}}
+                <div class="btn-wrapper" v-if="selectedPromise.status !=='end'">
+                    <b-button @click="getLocation">내 위치 갱신</b-button>
+                    <b-button @click="arrive">도착 신고</b-button> <br>
+                </div>
                 <h4>참가자</h4>
                 <ul>
-                    <li class="participant" v-for="member in selectedPromise.members" v-if="member.userName !=='user.userName'">{{member.userName}}</li>
+                    <li class="participant" v-for="member in selectedPromise.members">{{member.userName}} <span v-if="selectedPromise.status !=='end'">{{computeDistance(member.latitude,member.longitude,selectedPromise)}} km</span></li>
                 </ul>
             </div>
             <!-- 마이 페이지 -->
@@ -94,7 +107,7 @@
             </div>
             <!-- 약속 만들기( Modal ) -->
             <div>
-              
+                <button v-b-modal.create-promise class="add-btn" v-if="mode === 'list'">+</button>
                 <b-modal id="create-promise" title="약속 만들기" hide-footer>
                     <div class="modal-body">
                         <p>약속이름 :</p>
