--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <title>Log-in</title>
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-<link rel="stylesheet" href="JS/test4/login.css" type="text/css" />
+<link rel="stylesheet" href="css/login.css" type="text/css" />
 
 </head>
 
