Add : css 추가 작업

--- a/src/main/resources/static/css/app.css
+++ b/src/main/resources/static/css/app.css
@@ -8,6 +8,10 @@ ul, li {
   margin: 0 0 0 0;
 }
 
+#placesList{
+	padding-inline-start: 40px;
+}
+
 .app > .head {
   position: relative;
   padding: 10px;
