--- a/src/main/resources/templates/app.html
+++ b/src/main/resources/templates/app.html
@@ -39,19 +39,19 @@
         <div class="body" v-if="category === 'Personal'">
             <!-- 내 약속 모두 보기-->
             <div class="list" v-if="mode === 'list' && promises.length!==0">
-            	<h5 class = "name" v-for="promises in getPromises('today')" v-if="promises.status === 'today'">Right Now</h5>
+            	<h5 class = "name" v-if="getPromises('today').length!==0">Right Now</h5>
                 <ul>
                     <li class="promise today" v-for="promise in getPromises('today')" @click = "selectPromise(promise)">{{ promise.promiseName }}
                     <!-- <span class="promise-status" /> -->
                     </li>
                 </ul>
-                <h5 class = "name" v-for="promises in getPromises('upcoming')" v-if="promises.status === 'upcoming'">To Go</h5>
+                <h5 class = "name" v-if="getPromises('upcoming').length!==0">To Go</h5>
                 <ul>
                     <li class="promise upcoming" v-for="promise in getPromises('upcoming')" @click = "selectPromise(promise)">{{ promise.promiseName }}
                     <!-- <span class="promise-status" /> -->
                     </li>
                 </ul>
-                <h5 class = "name" v-for="promises in getPromises('end')" v-if="promises.status === 'end'">History</h5>
+                <h5 class = "name" v-if="getPromises('end').length!==0">History</h5>
                 <ul>
                     <li class="promise end" v-for="promise in getPromises('end')" @click = "selectPromise(promise)">{{ promise.promiseName }}
                     <!-- <span class="promise-status" :class="{'late': promise.arrival==='ontime'}" /> -->
@@ -65,8 +65,6 @@
                </div>
             </div>
             
-            
-            
             <!-- 상세내용 표기 -->
             <div id="promise-page" v-else-if = "mode === 'promise'"> 
                 <h2>{{selectedPromise.promiseName}}</h2>
@@ -76,8 +74,9 @@
                 {{selectedPromise.promiseTime.substring(0,16)}}<br>
                 <hr>
                 <div class="btn-wrapper" v-if="selectedPromise.status !=='end'">
-                    <b-button @click="getLocation">내 위치 갱신</b-button>
-                    <b-button @click="arrive">도착 신고</b-button> <br>
+                	<button class = "click" @click="getLocation">내 위치 갱신</button>
+                    <button class = "click" @click="arrive">도착 신고</button>
+                    <button class = "click" @click = "getRoomId">주소복사하기</button>
                 </div>
                 <h4>참가자</h4>
                 <ul>
@@ -93,11 +92,11 @@
 	                </p> 
 	                <input type="text" class="my-page-input" v-model="user.userEmail" max="100" min="1" placeholder="이메일을 입력해주세요">
 	                <p>성별</p>
-	                <input type="text" class="my-page-input" v-model="user.userGender" max="100" min="1" placeholder="Null select box로 바꾸자">
+	                <input type="text" class="my-page-input" v-model="user.userGender" max="100" min="1" placeholder="성병을 입력해 주세요">
 	                <p>나이</p>
 	                <input type="text" class="my-page-input" v-model="user.userAge" max="100" min="1" placeholder="나이를 입력해주세요">
 	                <p>연락처</p>
-	                <input type="text" class="my-page-input" v-model="user.userPhone" placeholder="전화번호를 입력해주세요 010-0000-0000">
+	                <input type="text" class="my-page-input" v-model="user.userPhone" placeholder="전화번호를 입력해주세요">
 	                <br><hr>
 	                <h3>자주 가는 장소</h3>
 	                <table>
