--- a/src/main/resources/static/css/mypage.css
+++ b/src/main/resources/static/css/mypage.css
@@ -30,7 +30,7 @@
 .favorite {
     border: 2px solid rgb(52, 183, 243);
     border-radius: 15px;
-    margin: 2px 5px 2px 5px;
+    margin: 2px 3px 2px 3px;
     padding: 2px 2px 2px 2px;
   }
 
@@ -45,4 +45,23 @@
     visibility: visible;
     transform: translateY(0);
   }
+}
+
+#logout-btn{
+	padding: 0 0 0 0;
+    display: inline-block;
+    width: 152px;
+    height: 50px;
+    text-align: center;
+    line-height: 0px;
+    font-size: 24px;
+    right: 10px;
+    bottom: 10px;
+    background: rgb(52, 183, 243);
+    color: white;
+    border: 0;
+    border-radius: 59%;
+    z-index: 300;
+  	margin-left: 90px;
+    margin-right: 90px;
 }
